// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should display ExpenseSummary correctly with a single expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $2.34
  </h1>
</div>
`;

exports[`Should display ExpenseSummary correctly with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    54
     
    expenses
     totaling 
    $973.00
  </h1>
</div>
`;
